<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Тренерская</string>
    
    <!-- Навигация -->
    <string name="home">Главная</string>
    <string name="calendar">Календарь</string>
    <string name="clients">Клиенты</string>
    <string name="settings">Настройки</string>
    <string name="title_home">Главная</string>
    <string name="title_dashboard">Тренировки</string>
    <string name="title_notifications">Профиль</string>
    <string name="title_calendar">Календарь</string>
    <string name="title_calculator">Калькулятор</string>
    
    <!-- Клиенты -->
    <string name="add_client">Добавить клиента</string>
    <string name="edit_client">Редактировать клиента</string>
    <string name="client_name">Имя клиента</string>
    <string name="client_email">Email</string>
    <string name="client_phone">Телефон</string>
    <string name="client_height">Рост (см)</string>
    <string name="client_weight">Вес (кг)</string>
    <string name="client_notes">Заметки</string>
    <string name="save_client">Сохранить</string>
    <string name="delete_client">Удалить</string>
    <string name="select_client">Выберите клиента</string>
    
    <!-- Тренировки -->
    <string name="add_training">Добавить тренировку</string>
    <string name="edit_training">Редактировать тренировку</string>
    <string name="view_training">Просмотр тренировки</string>
    <string name="training_name">Название тренировки</string>
    <string name="training_date">Дата</string>
    <string name="training_time">Время</string>
    <string name="training_notes">Заметки</string>
    <string name="save_training">Сохранить</string>
    <string name="delete_training">Удалить</string>
    <string name="training_duration">Продолжительность (мин)</string>
    <string name="exercises">Упражнения</string>
    
    <!-- Упражнения -->
    <string name="add_exercise">Добавить упражнение</string>
    <string name="edit_exercise">Редактировать упражнение</string>
    <string name="exercise_name">Название упражнения</string>
    <string name="exercise_sets">Подходы</string>
    <string name="exercise_reps">Повторения</string>
    <string name="exercise_weight">Вес (кг)</string>
    <string name="exercise_notes">Заметки</string>
    <string name="save_exercise">Сохранить</string>
    <string name="delete_exercise">Удалить</string>
    
    <!-- Общие -->
    <string name="save">Сохранить</string>
    <string name="cancel">Отмена</string>
    <string name="delete">Удалить</string>
    <string name="edit">Редактировать</string>
    <string name="view">Просмотр</string>
    <string name="notes">Заметки</string>
    <string name="error">Ошибка</string>
    <string name="success">Успешно</string>
    <string name="loading">Загрузка...</string>
    <string name="no_data">Нет данных</string>
    <string name="switch_theme">Сменить тему</string>
    
    <string name="title_clients">Клиенты</string>
    <string name="title_settings">Настройки</string>
    <string name="title_add_client">Добавить клиента</string>
    <string name="title_add_training">Добавить тренировку</string>
    <string name="title_view_training">Просмотр тренировки</string>
    <string name="title_add_exercise">Добавить упражнение</string>
    <string name="title_edit_exercise">Редактировать упражнение</string>
    <string name="title_view_client">Информация о клиенте</string>
    <string name="title_edit_client">Редактировать клиента</string>
    
    <string name="name">Имя</string>
    <string name="email">Email</string>
    <string name="phone">Телефон</string>
    <string name="height">Рост (см)</string>
    <string name="weight">Вес (кг)</string>
    <string name="client_goals">Цели клиента</string>
    <string name="client_parameters">Параметры клиента</string>
    <string name="client_details">Информация о клиенте</string>
    <string name="search">Поиск</string>
    <string name="change_photo">Изменить фото</string>
    <string name="add">Добавить</string>
    <string name="view_details">Подробнее</string>
    <string name="bmi_calculator">Калькулятор ИМТ</string>
    <string name="calculate">Рассчитать</string>
    <string name="dark_theme">Темная тема</string>
    <string name="notifications">Уведомления</string>
    <string name="logout">Выйти</string>
    <string name="no_clients">Нет клиентов</string>
    <string name="no_trainings">Нет тренировок</string>
    <string name="no_exercises">Нет упражнений</string>
    <string name="training_client">Клиент</string>
</resources>